--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,15 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+# .circleci/config.yml
+
 version: 2.1
+
 jobs:
+  # This build job just tests that the binary can build. If your project is a
+  # library, not a binary, you don't need this build job. In other words, omit
+  # this job if you don't have a func main() in your project.
   build:
     working_directory: ~/repo
     docker:
-      - image: circleci/golang:1.15.8
+      - image: golang:1.16-alpine
     steps:
       - checkout
       - restore_cache:
@@ -17,9 +22,29 @@ jobs:
           key: go-mod-v4-{{ checksum "go.sum" }}
           paths:
             - "/go/pkg/mod"
-      - run:
-          name: Run tests
-          command: |
-            go test ./... -v
-      - store_test_results:
-          path: /tmp/test-reports
+    executor:
+      - go build
+
+  lint:
+    docker:
+      - image: golangci/golangci-lint:v1.37-alpine
+    steps:
+      - checkout
+      - run: golangci-lint run
+  test:
+    docker:
+      # We use golang:1.16 instead of golang:1.16-alpine because we want to run
+      # tests with the race detector enabled. The race detector requires glibc,
+      # which is only present in the Debian-based containers.
+      - image: golang:1.16
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run: go test -v -race ./...
+
+workflows:
+  build_lint_test:
+    jobs:
+      - build
+      - lint
+      - test
