--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,14 @@ jobs:
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - checkout
-      - run: sudo docker image build -t gopython/hr .
-      - run: docker push gopython/hr
+      - setup_remote_docker:
+          version: 19.03.13
+          docker_layer_caching: true
+      # build and push Docker image
+      - run: |
+          docker build -t gopython/hr .
+          echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+          docker push gopython/hr
 workflows:
   build_lint_test:
     jobs:
