--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
       - image: docker:17.05.0-ce-git #circleci/golang
         auth:
           username: gopython
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+          password: P@ssw0rd1! #$DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - checkout
       - setup_remote_docker:
