--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@
 version: 2.1
 orbs:
   aws-ecr: circleci/aws-ecr@7.0.0
-  #aws-ecs: circleci/aws-ecs@2.2.1
 jobs:
   # This build job just tests that the binary can build. If your project is a
   # library, not a binary, you don't need this build job. In other words, omit
@@ -59,16 +58,59 @@ jobs:
           echo $DOCKER_PASS | docker login -u gopython -p P@ssw0rd1!
           docker push gopython/hr
 
-  awsmanage:
+  aws:
     docker:
-      - image: 831466106657.dkr.ecr.us-east-1.amazonaws.com/org/repo:0.1
-        aws_auth:
-          aws_access_key_id: AKIA4DFZ554QRHT6J2W6
-          aws_secret_access_key: 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
+      - image: circleci/openjdk:8-jdk
     steps:
+      - checkout
       - run:
-          name: "Every Day Tests"
-          command: aws help
+          name: Deploy
+          command: |
+            # 1- Install AWS CLI
+            curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+            unzip awscli-bundle.zip
+            ./awscli-bundle/install -b ~/bin/aws
+            # 2- Get the public IP of the current CircleCI runner
+            PUBLIC_IP=$(curl ipinfo.io/ip)
+            # 3- Get AWS Region
+            AWS_REGION=us-east-1
+            # 4- Get SG ID
+            SG_ID=RKC9/a1Unv1+r7FHCD8+7aLkX3e+me3qdyKsD9KE
+            # 5- Add an ingress rule to the security group
+            ~/bin/aws ec2 authorize-security-group-ingress --region $AWS_REGION --group-id $SG_ID \
+              --protocol tcp --port 22 --cidr $PUBLIC_IP/24
+            # 6- Give the ingress rule some time to propogate
+            sleep 5
+            # 7- SSH to the server to deploy
+            # TODO Change to your username
+            EC2_USERNAME=cloud_user
+            # TODO Change to your server's URL or public IP
+            EC2_PUBLIC_DNS=ttps://831466106657.signin.aws.amazon.com/console?region=us-east-1
+            ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS \
+            # other commands
+            # TODO Perform steps to deploy
+            # .
+            # .
+            # .
+            # 8- Remove the ingress rule
+            ~/bin/aws ec2 revoke-security-group-ingress --region $AWS_REGION --group-id $SG_ID \
+              --protocol tcp --port 22 --cidr $PUBLIC_IP/24
+
+  - aws-ecr/build-and-push-image:
+      account-url: https://831466106657.signin.aws.amazon.com/console?region=us-east-1
+      aws-access-key-id: AKIA4DFZ554QRHT6J2W6
+      aws-secret-access-key: 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
+      context: myContext
+      create-repo: true
+      dockerfile: Dockerfile
+      no-output-timeout: 20m
+      path: Dockerfile
+      profile-name: myProfileName
+      region: us-east-1
+      repo: hr
+      skip-when-tags-exist: false
+      tag: 'latest,hrTag'
+
 workflows:
   build_lint_test:
     jobs:
@@ -76,4 +118,4 @@ workflows:
       - lint
       - test
       - dockerimage
-      - awsmanage
+      - aws
